[tool.pyright]
reportMissingImports=false

[tool.poetry]
name = "mehappynew"
version = "0.1.0"
description = ""
authors = ["Wyatt Queirolo <wfq2@cornell.edu>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "1.8.2"
fastapi = "*"
jinja2 = "*"
asyncpg = ">=0.24.0"
alembic = ">=1.7.4"
SQLAlchemy = ">=1.4.25"
kink = "*"
python-jose = "*"
passlib = "*"
bcrypt = "*"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pyright = "*"
flake8 = "*"
pre-commit = "*"
pytest = "*"
pytest-mock = "*"
httpx = "*"
requests = "*"
testcontainers = "*"
pytest-asyncio = "*"


[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"